web-components/chatbots-select-personality-page/chatbots-select-personality-page.css
.page-body{
    position: relative;
}
.bots-background{
    z-index: -1;
    object-fit: cover;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: 1;
}
.chatbots-header{
    padding: 15px 15px 15px 25px;
    font-weight: 700;
    font-size: 28px;
    color:  var(--left-sidebar);
    box-shadow: 0 2px 4px 0 var(--chatbots-shadow);
}
.choose-personality{
    padding: 25px 25px 0 25px;
    font-size: 20px;
    font-weight: 600;
}
.table{
    display: grid;
    grid-template-columns: repeat(9, 1fr);
    grid-template-rows: repeat(9, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
}
personality-unit{
    padding: 25px;
}
.text{
    font-weight: 500;
    font-size: 22px;
}
.no-personality{
    margin: 25px;
    color: var(--form-input-error);
    width: 200px;
}

